@startuml
class App{
+print()
}

class Input{
+getProductName()
}

class Products{
-products: ArrayList

}

class Items{
#name: String
#price: String
#quantity: String
}

class JSONRecord{
-itemList: ArrayList
-promptAgain: boolean
+importJson()
+getItemList()
+searchList()
+isPromptAgain()
}

App o-- Input
App o-- JSONRecord
JSONRecord *-- Products
Products *-- Items

@enduml